# rustdalaobot

./: .gitignore  CHANGELOG.md  rustdalaobot.cabal
app/: Main.hs
