cabal-version:      2.4
name:               rustdalaobot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ksqsf
maintainer:         i@ksqsf.moe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable rustdalaobot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, telegram-bot-simple ^>=0.3.5, text >= 1.2.4.1, random >= 1.1
    hs-source-dirs:   app
    default-language: Haskell2010
